Remove <br />, add margin-bottom

--- a/page10.html
+++ b/page10.html
@@ -35,7 +35,7 @@
     </nav>
     <hr id="page10" />
     <article id="roman">
-        <h3><br />Chapitre 2</h3>
+        <h3 class="chapter-title">Chapitre 2</h3>
         <p class="tabulation first-element"><span style="font-size: x-large;">U</span>ne aventure après l'autre... Qu'une seule
             question ne se pose: Que faire
             en certains cas, que faire en ces cas-là? Je suis partie d'un point où tout était
@@ -65,8 +65,8 @@
             pour mieux l'aimer à la fin. Je me sens prête! Que quelqu’un ou quelque-chose
             vienne pour voir. Je me sens prête, prête à tout!!</p>
         <p style="text-align: center;">____________________</p>
-        <p class="tabulation">La vie se rallume, je me rallume! Moi qui était éteinte, prête à tout faire mais
-            pourtant... sans aucun pouvoir. La vie se clarifie!! Je peux devenir autre que cette</p><br />
+        <p class="tabulation" style="margin-bottom: 8px">La vie se rallume, je me rallume! Moi qui était éteinte, prête à tout faire mais
+            pourtant... sans aucun pouvoir. La vie se clarifie!! Je peux devenir autre que cette</p>
 
         <p id="page2">10</p>
     </article>
