--- a/page11.html
+++ b/page11.html
@@ -72,7 +72,7 @@
             Bienvenue sur Terre! Je vous invite tous à vivre dans mon propre monde si vous
             le voulez bien... On est si bien, fermez vos yeux et vivez avec tout. Tout ce qui
             vous retient et vous empêche de vivre comme bon vous chante!</p>
-        <p style="text-align: center">____________________</p><br /><br />
+        <p style="text-align: center" style="margin-bottom: 30px">____________________</p>
 
         <p id="page1">11</p>
     </article>
