--- a/page12.html
+++ b/page12.html
@@ -59,8 +59,7 @@
             intérieurement.. Pire! Morte par mon accident en plus!<br />
             <span class="expression3">**Mais c’est extérieur ça, non?</span>
         </p><br />
-        <p class="tabulation">Oui! Alors je ne suis que toute morte! En fait, je ne sais plus ce que je suis...</p>
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        <p class="tabulation" style="margin-bottom: 300px;">Oui! Alors je ne suis que toute morte! En fait, je ne sais plus ce que je suis...</p>
 
         <p id="page2">12</p>
     </article>
