--- a/page13.html
+++ b/page13.html
@@ -34,7 +34,7 @@
     </nav>
     <hr id="page13" />
     <article id="roman">
-        <h3><br />Chapitre 3</h3>
+        <h3 class="chapter-title">Chapitre 3</h3>
         <p class="tabulation first-element"><span style="font-size: x-large;">A</span>lors que je
             réfléchissais sur tous les obstacles de la vie m'ayant atteinte, j’ai pensé à mon
             amour... Si présent en moi, telle de la détresse mais en plus
