--- a/page14.html
+++ b/page14.html
@@ -65,10 +65,10 @@
             Lorsque l’éclair a surgi!<br />
             Les nuages se sont écartés<br />
             Et la lumière se fit</p>
-        <p class="poeme">À force de courage, d’espérance et de persévérance<br />
+        <p class="poeme" style="margin-bottom: 8px;">À force de courage, d’espérance et de persévérance<br />
             J’ai pu écrire des histoires de magie et le récit de ma vie...<br />
             Celle par laquelle je suis ici aujourd’hui<br />
-            Je vous écris ceci, rassemblant tout mon ardeur et ma force ...</p><br />
+            Je vous écris ceci, rassemblant tout mon ardeur et ma force ...</p>
 
         <p id="page2">14</p>
     </article>
