--- a/page15.html
+++ b/page15.html
@@ -63,12 +63,12 @@
             <p class="tabulation">Mais parmi le malheur comme je l’ai dit: Il est toujours possible de trouver
                 de la joie. Le problème, un problème que je me suis bien rendue compte ces
                 dernières années; est que nous sommes tous différents!</p>
-            <p class="tabulation">J’ai avancé dans le noir, yeux fermés... Alors que l’impossible devenait
+            <p class="tabulation" style="margin-bottom: 115px;">J’ai avancé dans le noir, yeux fermés... Alors que l’impossible devenait
                 possible et que je voyais tout, tout ce qui me faisait vivre. Je voyais l’amour! Si
                 beau mais pourtant, ô! mais pourtant..! si ambitieux... Pourquoi? Mais pourquoi
                 avons-nous donc tant besoin de cet amour..? Le voir ce n’est pourtant pas comme
                 le sentir. Je l’aimais - Je l’aime - Et je suis prête à l’aimer! Oui, mais laissez-moi au
-                moins la chance de faire autre que de l’écrire... Parce que là!</p><br /><br /><br /><br /><br />
+                moins la chance de faire autre que de l’écrire... Parce que là!
 
             <p id="page1">15</p>
         </article>
