--- a/page16.html
+++ b/page16.html
@@ -69,7 +69,7 @@
             <span class="tabulation1">NON!! N’avez-vous donc pas vu? Le verbe est prononcé à l'imparfait! Ne</span>
             m’écoutez donc pas?!
         </p>
-        <p class="center">____________________</p><br /><br /><br />
+        <p class="center" style="margin-bottom: 65px;">____________________</p>
 
         <p id="page2">16</p>
     </article>
