--- a/page17.html
+++ b/page17.html
@@ -34,7 +34,7 @@
     </nav>
     <hr id="page17" />
     <article id="roman">
-        <p class="tabulation">La lumière efface les ténèbres et me donne des doutes. Des doutes, oui,
+        <p class="tabulation" style="margin-bottom: 700px;">La lumière efface les ténèbres et me donne des doutes. Des doutes, oui,
             elle me donne des doutes... Mais pourquoi? Qu’est-ce que la vie veut à propos de
             moi? Qu’est-ce que je devrais faire?<br />
             <span class="tabulation">Je sais ce que j'ai à faire: Sortir les 3 lettres, non 4! A.R.K.(e)! Ce n’est pas</span>
@@ -45,8 +45,7 @@
             tout petits pour moi, et tout ce que j’avais à faire était de voir la vie avec de bons
             yeux.
         </p>
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
+ 
         <p id="page1" class="page17">17</p>
     </article>
     <footer>
