--- a/page18.html
+++ b/page18.html
@@ -35,8 +35,8 @@
     </nav>
     <hr id="page18" />
     <article id="roman">
-        <h3><br />Chapitre 4</h3>
-        <p class="tabulation"><span style="font-size: x-large;">A</span>wh! Et là je
+        <h3 class="chapter-title">Chapitre 4</h3>
+        <p class="tabulation first-element"><span style="font-size: x-large;">A</span>wh! Et là je
             re-désespère..! J’ai demandé au ciel si je pouvais être ailleurs,
             je l’ai supplié. C’était une demande telle qu’il lui était impossible de la refuser.
             Mais vous savez comment il m’a répondue? En me faisant vivre le calvaire..! Je
