--- a/page19.html
+++ b/page19.html
@@ -59,12 +59,12 @@
                     mauvais moments passés avec lui si je veux l'oublier. Je chercherais longtemps
                     franchement! J’aime mieux penser à toutes les belles choses qu’il m’a apportées
                     dans ma vie et que je n’aurais pas eues sans l’avoir connu.</p>
-                <p class="tabulation">En gros avec sa rencontre, je me suis sentie plus vivante que jamais! Je me
+                <p class="tabulation" style="margin-bottom: 60px;">En gros avec sa rencontre, je me suis sentie plus vivante que jamais! Je me
                     sentais prête à soulever la Terre sur mes épaules, à mettre feu à l’enfer, à passer
                     ma vie comme je la voyais, comme je l’ai toujours rêvée! Je me sentais rêver
                     quand j’étais avec lui, et comme je l’ai dit; je rêvais d'un monde meilleur..! Rêver
                     que j’étais vivante, j’aimais ça..! Faux, j’aime toujours ça. On disait s’appeler que
-                    pour se parler, comme tous les jeunes couples d'adolescents. Mais au fond, on</p><br /><br /><br />
+                    pour se parler, comme tous les jeunes couples d'adolescents. Mais au fond, on</p>
 
                 <p id="page1">19</p>
     </article>
