--- a/page20.html
+++ b/page20.html
@@ -36,7 +36,7 @@
     <hr id="page20" />
     <article id="roman">
         <p>s’appelait pour philosopher. On se parlait de la vie, des obstacles qu’elle avait la
-            bonne idée de placer sur notre route... Tsss! * Bonne idée, oui &#128518 </p>
+            bonne idée de placer sur notre route... <span class="expression">Tsss! * Bonne idée, oui &#128518 </span></p>
         <p class="tabulation">On s’aimait. Ça, je ne peux nous le cacher. Malgré que peut-être qu’il le
             peut. On ne sait jamais avec lui. Un soir il m’aimait à la folie! Mais dès le
             lendemain... Awh! J’ai bien dit que je ne parlerai pas contre lui, hein? Alors
@@ -44,7 +44,7 @@
             même! &#128518 </p>
         <p class="tabulation">Il manque une page à l’histoire, là. Je ne sais plus du tout quoi dire.
             C’est peut-être qu’en gros; préparez-vous, là, je me sens méchante..!
-            **Mouah ah ah!** Mais gentille en même temps; ne pleure pas Jammie mais c’était
+            <span style="font-style: italic;">**Mouah ah ah!**</span> Mais gentille en même temps; ne pleure pas Jammie mais c’était
             peut-être toi le problème dans toute cette histoire. Tu essayais de te mentir à toimême en mettant toute la
             faute sur elle. OK oui, je me l’avoue au fond! Non, je
             n’ai pas été parfaite et je suis heureuse que ce soit Nathan qui me l’ait appris. ...</p>
@@ -60,7 +60,7 @@
             relation n’est pas terminée, pas encore en tout cas. Je devrai travailler fort! Sortir
             de ma bulle et regarder devant moi pour voir que oui, il était là pour me sauver,
             mais que non, je n’étais pas prête.</p>
-        <p class="tabulation">Hum, et là je repense à la wicca. Aux lois presque philosophiques mais
+        <p class="tabulation" style="margin-bottom: 10px;">Hum, et là je repense à la wicca. Aux lois presque philosophiques mais
             encore plus vraies! Que j’ai comprises un peu trop tard, mais bon! On doit avant
             tout savoir. J’aurais donc dû le connaître vraiment avant d‘« essayer » de l’aider.
             J‘aurais donc su qu'il n‘en avait pas besoin et qu‘il ne le voulait pas. Vouloir, oui!
@@ -70,7 +70,7 @@
             très précieusement. J’ai pour croire qu’il faut laisser sa place au destin. Alors rien
             de bon n’arrivera si tu connais une « possibilité » de l’avenir. Les pages de notre
             vie ne sont pas fixées noir sur blanc, on peut encore, bien malgré nous, les
-            changer.<br /></p>
+            changer.</p>
 
         <p id="page2">20</p>
     </article>
