--- a/page28.html
+++ b/page28.html
@@ -35,8 +35,8 @@
     </nav>
     <hr id="page28" />
     <article id="roman">
-        <h3><br /><br />Chapitre cinq</h3>
-        <p class="tabulation"><span style="font-size: x-large;">P</span>eut-être m’es-tu indispensable, peut-être
+        <h3 class="chapter-title">Chapitre cinq</h3>
+        <p class="tabulation first-element"><span style="font-size: x-large;">P</span>eut-être m’es-tu indispensable, peut-être
             suis-je encore plus folle que je le
             pensais! Quoi qu’il en soit je t’aime, toi, mon doux Deamon! Je n’aime ni l’un ni
             l’autre. Tu es ma seule lumière, cet éclat qui m’a permis de regagner force et
@@ -57,7 +57,7 @@
             pour quoi? Qu’aime-t-il au juste? Que veut-il de moi? Il veut... Il ne veut rien de
             moi. Je disparaîtrai. J’AI disparu! Voici ce qu’il a voulu de moi, voici ce que j’ai
             fait.</p><br />
-        <p class="tabulation">Maintenant que je semble inatteignable, maintenant que je suis rendue à
+        <p class="tabulation" style="margin-bottom: 10px;">Maintenant que je semble inatteignable, maintenant que je suis rendue à
             une page plus loin dans le chapitre de ma vie, maintenant que je veux voir
             d’autre chose. Il me réapparaît d’un coup! Il veut être aimé, mais pourtant! Qui
             ne l’aime pas, le connaissant bien entendu!? J’en ai voulu quelque peu trop! Et
@@ -65,8 +65,8 @@
             été une situation stagnante. Le renouveau comme je l’ai si bien dit s’est fait
             entrapercevoir. Bien que les évolutions aient pris du temps à se mettre en place,
             j’ai posé les jalons... Sans abandonner, abandonner n’est point une option! Je dois
-            me remettre en question le moment venu qu'on me dit. Tsss! Pas trop dur
-            puisque je me remets déjà en question à tous les jours. &#128517 <br />
+            me remettre en question le moment venu qu'on me dit. <span style="font-style: italic;">Tsss! Pas trop dur
+            puisque je me remets déjà en question à tous les jours. &#128517 </span>
         </p>
 
         <p id="page2">28</p>
