--- a/page5.html
+++ b/page5.html
@@ -75,10 +75,10 @@
       Moi! Je vois la vie d'une toute autre façon. Je la vois avec de nouveaux yeux:
       Grâce aux yeux du cœur - au troisième œil... Je peux dire être moi, enfin!</p>
 
-    <p class="tabulation">La vie a mené une partie contre moi, elle attaquait tout le temps de
+    <p class="tabulation" style="margin-bottom: 30px;">La vie a mené une partie contre moi, elle attaquait tout le temps de
       travers. Alors qu'elle déplaçait son cavalier pour me mettre échec et math, je
       risquais tout et je virevoltais hors de ses griffes pour m'enfuir à l'abri, loin de
-      tout danger. Derrière ma tour; seule et en coin, elle était mon dernier recours.</p><br /><br />
+      tout danger. Derrière ma tour; seule et en coin, elle était mon dernier recours.</p>
 
     <p id="page1">5</p>
   </article>
