--- a/page6.html
+++ b/page6.html
@@ -75,8 +75,8 @@
       nous faire découvrir.. Par cet accident, mes yeux se sont ouverts. Non, je n'étais
       pas aveugle, privée de la vue avant mon accident. Non, mais je n'étais pas moi...
       Maintenant, je sais. Je ne vois pas seulement comme tous vos amis, je sais!!
-    <p class="tabulation citation">**Un
-      mot qui est pour moi magique, révélateur, et… Hum? Et, et!</p><br /><br />
+    <p class="tabulation citation" style="margin-bottom: 0px;">**Un
+      mot qui est pour moi magique, révélateur, et… Hum? Et, et!</p>
     <p id="page2">6</p>
   </article>
 
