--- a/page8.html
+++ b/page8.html
@@ -50,7 +50,7 @@
     Mais… <span class="expression2">J’pense à ça, là...</span><br />
     Vous devez vous demander: Qui est-il,<br />
     lui pour qui mon cœur brille</p><br />
-  <p class="tabulation">Je ne vais pas lâcher, je ne vais pas laisser tomber. Non, mais je ne
+  <p class="tabulation" style="margin-bottom: 40px">Je ne vais pas lâcher, je ne vais pas laisser tomber. Non, mais je ne
     comprends plus rien. Je ne comprends vraiment plus Rien! Où? Mais où suis-je?
     J'ai tâché de revenir droit à mon monde d'origine à la suite de mon accident... Mais
     où ai-je atterri? Je me le demande! J'avais une vie plutôt minable, oui. Sans aucun
@@ -70,7 +70,7 @@
     sans arrêt et sans stop. Tu y cours à la vitesse de l'éclair, tu te bats contre tous tes
     adversaires, contre tous ces monstres. Et finalement quoi? Tu vois, oui, tu vois.
     Grâce à de nouveaux yeux. Grâce à une nouvelle volonté, la volonté de vivre. Et
-    tout ça, qu'est-ce que ça te donne? Tu as l'impression d'avoir enfin trouvé un but</p><br /><br />
+    tout ça, qu'est-ce que ça te donne? Tu as l'impression d'avoir enfin trouvé un but</p>
     <p id="page2">8</p>
   </article>
   <footer>
