--- a/page9.html
+++ b/page9.html
@@ -53,12 +53,12 @@
             où nous pouvons tous vivre.</p>
         <br />
         <p style="text-align: center;">¤ ¤ ¤</p>
-        <p class="tabulation">Alors que mes souliers commencent à s'user, je commence moi-même à
+        <p class="tabulation" style="margin-bottom: 270px">Alors que mes souliers commencent à s'user, je commence moi-même à
             chercher une porte de sortie, une sortie à tout ce labyrinthe... Je voulais plus que
             tout la rencontrer. Cette sortie, cette porte, cet homme aux yeux si grands et si
             pleins d'un amour violent, remplis d'une connaissance et d'un désir d'apprendre
             à n'en plus finir..! Je l'aimerai, point!</p>
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        
 
         <p id="page1">9</p>
     </article>
