--- a/page4.html
+++ b/page4.html
@@ -36,7 +36,7 @@
     <!--<video src="Vidéos/WIN_20220103_18_42_24_Pro.mp4" width="25%" height="25%" style="border: 3px solid black; padding-top: 1px; padding-bottom: 1px; padding-left: 2px; padding-right: 2px;" controls>Pensez à mettre à jour votre navigateur</video>
     <hr id="page4" />-->
     <article id="roman">
-      <h3><br />Chapitre 1</h3>
+      <h3 class="chapter-title">Chapitre 1</h3>
 
       <p class="tabulation first-element"><span style="font-size: x-large;">L</span>es allées et venues, les parcours et détours, la
         chasse et la guerre! Je ne sais
