Added pagee 28 to page 52

--- a/page4.html
+++ b/page4.html
@@ -17,7 +17,7 @@
       <h1 class="center main-title"><strong>Mais où Donc?</strong></h1><br />
       <h4 style="margin-left: 5%; font-weight: normal;"><span style="font-weight: bold">Auteure:</span>
         <a id="mailto" href="mailto:jammie.lacc@outlook.com" title="Écrivez-moi" style="margin-bottom: 0px">Jammie Elena Lachance</a></h4>
-      <p style="font-size: xx-small; margin-left: 17%;">email <img src="images/flèche.jpg" /></p>
+      <p style="font-size: xx-small; margin-left: 25%;">email <img src="images/flèche.jpg" /></p>
     </header>
     <nav>
       <li><a href="page4.html#page4" title="Chapitre premier" class="chapitre">Chapitre 1</a></li>
@@ -91,8 +91,8 @@
           </div>
         </div>
       </section>
-      <script src="Script/script.js">
-
+      <script src="Script/script-p4.js">
+        
     </script>
   </div>
 </body>
