--- a/page49.html
+++ b/page49.html
@@ -25,43 +25,20 @@
         <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
         <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
         <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
-        <li><a href="page18.html#page18" title="Chapitre quatrième" class="chapitre">Chapitre 4</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
         <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
         <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
         <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
         <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
-        <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
+        <li><a href="page47.html#page47" title="Chapitre neuvième" class="chapitre">Chapitre 9</a></li>
         <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
-    <hr id="page25" />
+    <hr id="page49" />
     <article id="roman">
-        <p class="tabulation">Et que l’amour ne se situe pas toujours quelque part. Des fois on a à
-            chercher en nous-même si nous voulons avoir une chance de le trouver. Il est
-            comme mon ombre, il s'insinue dans mon cœur y reflétant de tels sentiments
-            qu’on ne pourrait qu’y retrouver: L'amour!</p>
-        <p style="text-align: center; font-style: italic;">Avec toi je n’ressens que d’la joie<br />
-            Mon cœur ne fait que parler de toi<br />
-            J’veux te perdre pour... euh... Rien au monde!<br />
-            Je pense à toi chaque seconde<br />
-            Mais pourquoi est-c’que t’es arrivé dans ma vie?
-            À force de vivre, t’en connais des émotions<br /><br />
-            Je n’ai pu ressentir de pareils émotions qu’envers lui<br />
-            Res<span style="font-weight: bold">sentir</span>? Ça sent quoi l’amour?<br /><br />
-            Une douceur telle qu’on ne pourrait que dire que cela se nomme l’amour.<br /><br />
-            Re et re-sentir, en lien avec l’amour et la douceur<br />
-            C’est comme le doux parfum d’une fleur<br />
-            La fleur est prise...<br />
-            Prise dans mes pensées<br />
-            Prise par mon regard<br />
-            Prise dans mon cœur<br />
-            Et un jour elle sera prise dans mes bras!</p>
-        <p class="tabulation">Je suis fragile comme une fleur, fragile comme de la soie. J’ai besoin de toi!
-            À vrai dire, je me sens vraiment comme un ange. On dit lorsqu'on fait des erreurs
-            que c’est normal, après tout, on est humain! Le suis-je? Je crois bien être venue du
-            ciel pour vous passer l'un de ces messages de persévérance..? Avouez que ce
-            serait beau! Pour me sortir de mon enfer et me guider vers la lumière, j’y suis</p>
-
-        <p id="page1">25</p>
+        <p style="margin-bottom: 700px;">ne dois perdre l'espoir de le trouver, plutôt. C'est que selon lui, je n'ai jamais
+            trouvé son cœur... Peut-être?</p>
+        
+        <p id="page2">49</p>
     </article>
     <footer>
         <div class="row">
@@ -79,11 +56,11 @@
     <section>
         <div class="row">
             <div class="col-7">
-                <a href="page24.html#page24" class="precedant"><img src="images/precedant.png" title="Page précédante"
+                <a href="page48.html#page48" class="precedant"><img src="images/precedant.png" title="Page précédante"
                         alt="Précédant" /></a>
             </div>
             <div clas="col-5">
-                <a href="page26.html#page26" class="suivant"><img src="images/suivant.png" title="Page suivante"
+                <a href="page50.html#page50" class="suivant"><img src="images/suivant.png" title="Page suivante"
                         alt="Suivant" /></a>
             </div>
         </div>
