--- a/page31.html
+++ b/page31.html
@@ -25,43 +25,34 @@
         <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
         <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
         <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
-        <li><a href="page18.html#page18" title="Chapitre quatrième" class="chapitre">Chapitre 4</a></li>
-        <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
+        <li><a href="page28.html#page28" title="Chapitre cinquième" class="chapitre">Chapitre 5</a></li>
         <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
         <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
         <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
         <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
         <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
-    <hr id="page25" />
+    <hr id="page31" />
     <article id="roman">
-        <p class="tabulation">Et que l’amour ne se situe pas toujours quelque part. Des fois on a à
-            chercher en nous-même si nous voulons avoir une chance de le trouver. Il est
-            comme mon ombre, il s'insinue dans mon cœur y reflétant de tels sentiments
-            qu’on ne pourrait qu’y retrouver: L'amour!</p>
-        <p style="text-align: center; font-style: italic;">Avec toi je n’ressens que d’la joie<br />
-            Mon cœur ne fait que parler de toi<br />
-            J’veux te perdre pour... euh... Rien au monde!<br />
-            Je pense à toi chaque seconde<br />
-            Mais pourquoi est-c’que t’es arrivé dans ma vie?
-            À force de vivre, t’en connais des émotions<br /><br />
-            Je n’ai pu ressentir de pareils émotions qu’envers lui<br />
-            Res<span style="font-weight: bold">sentir</span>? Ça sent quoi l’amour?<br /><br />
-            Une douceur telle qu’on ne pourrait que dire que cela se nomme l’amour.<br /><br />
-            Re et re-sentir, en lien avec l’amour et la douceur<br />
-            C’est comme le doux parfum d’une fleur<br />
-            La fleur est prise...<br />
-            Prise dans mes pensées<br />
-            Prise par mon regard<br />
-            Prise dans mon cœur<br />
-            Et un jour elle sera prise dans mes bras!</p>
-        <p class="tabulation">Je suis fragile comme une fleur, fragile comme de la soie. J’ai besoin de toi!
-            À vrai dire, je me sens vraiment comme un ange. On dit lorsqu'on fait des erreurs
-            que c’est normal, après tout, on est humain! Le suis-je? Je crois bien être venue du
-            ciel pour vous passer l'un de ces messages de persévérance..? Avouez que ce
-            serait beau! Pour me sortir de mon enfer et me guider vers la lumière, j’y suis</p>
+        <p class="tabulation">... &#128533 <br /></p>
+        <span class="tabulation">Même si finalement non, tu ne m’aimes pas. Je comprends et c'est tout à
+            fait dans tes droits. Tu restes pour moi un modèle; non, je ne souhaite pas être si
+            belle et charmante que toi. Je veux être courageuse comme toi et persévérer dans
+            tout ce que j'entreprends. Et même si tu ne veux plus de moi, je continue et c’est
+            toi que je veux! Non pas comme un objet mais comme une personne à part
+            entière qui se démarque parmi tant d’autres pour kidnapper mon cœur. La
+            chance n’arrive pas toute seule, il faut la provoquer! Mais où?
+            Je pars à la recherche de « où ». Je m’envole, je ne sais où! Alors je vois des
+            couleurs. Impressionnant? Non, du tout! Seulement ces couleurs te caractérisent
+            toi, Deamon.</p>
+            <p class="tabulation" style="margin-bottom: 450px">Je vois tout ça et me dis que tout pourrait être beau... Si seulement! Si le
+                passé redevenait le futur, toutes nos erreurs commises seraient alors effacées. Si
+                tous les compteurs repartaient à zéro... Le doux rêve étant de ne pas refaire les
+                mêmes choix, les mêmes erreurs. On vit au moment présent et c’est donc
+                naturellement impossible. Au lieu de s’inquiéter de son avenir, préparons-le!</p>
 
-        <p id="page1">25</p>
+            <p id="page1">31</p>
     </article>
     <footer>
         <div class="row">
@@ -75,20 +66,20 @@
         </div>
         <button class="télécharger" href="Mais où Donc.pdf" target="_blank">TÉLÉCHARGER</button></span></p>
     </footer>
-    
+
     <section>
         <div class="row">
             <div class="col-7">
-                <a href="page24.html#page24" class="precedant"><img src="images/precedant.png" title="Page précédante"
+                <a href="page30.html#page30" class="precedant"><img src="images/precedant.png" title="Page précédante"
                         alt="Précédant" /></a>
             </div>
             <div clas="col-5">
-                <a href="page26.html#page26" class="suivant"><img src="images/suivant.png" title="Page suivante"
+                <a href="page32.html#page32" class="suivant"><img src="images/suivant.png" title="Page suivante"
                         alt="Suivant" /></a>
             </div>
         </div>
     </section>
-    
+
     <script src="Script/script.js">
 
     </script>
