--- a/page36.html
+++ b/page36.html
@@ -25,43 +25,40 @@
         <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
         <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
         <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
-        <li><a href="page18.html#page18" title="Chapitre quatrième" class="chapitre">Chapitre 4</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
         <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
-        <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
+        <li><a href="page35.html#page35" title="Chapitre sixième" class="chapitre">Chapitre 6</a></li>
         <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
         <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
         <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
         <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
-    <hr id="page25" />
+    <hr id="page36" />
     <article id="roman">
-        <p class="tabulation">Et que l’amour ne se situe pas toujours quelque part. Des fois on a à
-            chercher en nous-même si nous voulons avoir une chance de le trouver. Il est
-            comme mon ombre, il s'insinue dans mon cœur y reflétant de tels sentiments
-            qu’on ne pourrait qu’y retrouver: L'amour!</p>
-        <p style="text-align: center; font-style: italic;">Avec toi je n’ressens que d’la joie<br />
-            Mon cœur ne fait que parler de toi<br />
-            J’veux te perdre pour... euh... Rien au monde!<br />
-            Je pense à toi chaque seconde<br />
-            Mais pourquoi est-c’que t’es arrivé dans ma vie?
-            À force de vivre, t’en connais des émotions<br /><br />
-            Je n’ai pu ressentir de pareils émotions qu’envers lui<br />
-            Res<span style="font-weight: bold">sentir</span>? Ça sent quoi l’amour?<br /><br />
-            Une douceur telle qu’on ne pourrait que dire que cela se nomme l’amour.<br /><br />
-            Re et re-sentir, en lien avec l’amour et la douceur<br />
-            C’est comme le doux parfum d’une fleur<br />
-            La fleur est prise...<br />
-            Prise dans mes pensées<br />
-            Prise par mon regard<br />
-            Prise dans mon cœur<br />
-            Et un jour elle sera prise dans mes bras!</p>
-        <p class="tabulation">Je suis fragile comme une fleur, fragile comme de la soie. J’ai besoin de toi!
-            À vrai dire, je me sens vraiment comme un ange. On dit lorsqu'on fait des erreurs
-            que c’est normal, après tout, on est humain! Le suis-je? Je crois bien être venue du
-            ciel pour vous passer l'un de ces messages de persévérance..? Avouez que ce
-            serait beau! Pour me sortir de mon enfer et me guider vers la lumière, j’y suis</p>
-
-        <p id="page1">25</p>
+        <p class="tabulation">Ouf! Vous me pardonnerez d’avoir souhaité et espéré de tout cœur qu’il
+            puisse entendre mes pensées et se dise que je valais le coup finalement! Il n’a
+            jamais été supposé venir me voir, et de toute façon; tant mieux! puisque je suis
+            présentement bien trop occupée même si j’en ai pas l’impression. Je partirai le
+            revoir... bientôt?</p>
+        <p class="tabulation">Hum... quand on veut, on peut! J’ai bien beau le vouloir et l'espérer mais je
+            ne l’aurai pas sans tout d'abord essayer. Il y a des gens que tu touches et d’autres
+            dont tu rêves. J’ai fait l'un de ces rêves fabuleux... ces dernières années! J’ai pu
+            rêver qu’il m’aimait, ce qui peut expliquer un peu le début de mon livre..!
+            J’espère que c’était un rêve prémonitoire qui se réalisera sous peu! Je pratique
+            donc ma patience... C’est fou ce qu’il réussit à me faire accomplir des miracles
+            même à distance! Outch que c’est dur...</P>
+        <p class="tabulation">Je veux mourir, non! Je veux tout arrêter, tout terminer, je veux tout
+            recommencer. Je me promène dans un large cercle infini. La route est longue et je
+            n’ai pas l’impression que je vais arriver un jour! J’ai une très grosse envie... mais
+            pas de pisser, là. J’ai cette envie pressante d'arrêter. Je survis en attente de ma
+            mort! Je suis épuisée, je me sens faible... Tous mes efforts ne font qu’empirer mon
+            état actuel!</P>
+        <p class="tabulation">Mon âme est brisé... Je ne sais vraiment plus pourquoi tout! Pourquoi tout
+            m’arrive, pourquoi tout est là, comme ça... Pourquoi? Je dois arrêter, mais... facile
+            à dire, plus dur à faire! Alors je l’écris: <strong>J'ARRÊTE!</strong></p>
+        <p class="center" style="margin-bottom: 300px; font-weight: bold;">F.I.N.</p>
+        
+        <p id="page2">36</p>
     </article>
     <footer>
         <div class="row">
@@ -79,11 +76,11 @@
     <section>
         <div class="row">
             <div class="col-7">
-                <a href="page24.html#page24" class="precedant"><img src="images/precedant.png" title="Page précédante"
+                <a href="page35.html#page35" class="precedant"><img src="images/precedant.png" title="Page précédante"
                         alt="Précédant" /></a>
             </div>
             <div clas="col-5">
-                <a href="page26.html#page26" class="suivant"><img src="images/suivant.png" title="Page suivante"
+                <a href="page37.html#page37" class="suivant"><img src="images/suivant.png" title="Page suivante"
                         alt="Suivant" /></a>
             </div>
         </div>
