--- a/page40.html
+++ b/page40.html
@@ -25,7 +25,7 @@
         <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
         <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
         <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
-        <li><a href="page18.html#page18" title="Chapitre quatrième" class="chapitre">Chapitre 4</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
         <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
         <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
         <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
@@ -33,35 +33,34 @@
         <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
         <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
-    <hr id="page25" />
+    <hr id="page40" />
     <article id="roman">
-        <p class="tabulation">Et que l’amour ne se situe pas toujours quelque part. Des fois on a à
-            chercher en nous-même si nous voulons avoir une chance de le trouver. Il est
-            comme mon ombre, il s'insinue dans mon cœur y reflétant de tels sentiments
-            qu’on ne pourrait qu’y retrouver: L'amour!</p>
-        <p style="text-align: center; font-style: italic;">Avec toi je n’ressens que d’la joie<br />
-            Mon cœur ne fait que parler de toi<br />
-            J’veux te perdre pour... euh... Rien au monde!<br />
-            Je pense à toi chaque seconde<br />
-            Mais pourquoi est-c’que t’es arrivé dans ma vie?
-            À force de vivre, t’en connais des émotions<br /><br />
-            Je n’ai pu ressentir de pareils émotions qu’envers lui<br />
-            Res<span style="font-weight: bold">sentir</span>? Ça sent quoi l’amour?<br /><br />
-            Une douceur telle qu’on ne pourrait que dire que cela se nomme l’amour.<br /><br />
-            Re et re-sentir, en lien avec l’amour et la douceur<br />
-            C’est comme le doux parfum d’une fleur<br />
-            La fleur est prise...<br />
-            Prise dans mes pensées<br />
-            Prise par mon regard<br />
-            Prise dans mon cœur<br />
-            Et un jour elle sera prise dans mes bras!</p>
-        <p class="tabulation">Je suis fragile comme une fleur, fragile comme de la soie. J’ai besoin de toi!
-            À vrai dire, je me sens vraiment comme un ange. On dit lorsqu'on fait des erreurs
-            que c’est normal, après tout, on est humain! Le suis-je? Je crois bien être venue du
-            ciel pour vous passer l'un de ces messages de persévérance..? Avouez que ce
-            serait beau! Pour me sortir de mon enfer et me guider vers la lumière, j’y suis</p>
-
-        <p id="page1">25</p>
+        <h1 class="chapter-title" style="text-align: center; font-weight: bold;">Épilogue</h1>
+        <p class="first-element tabulation">- Ce désir est si fort..! Je t'aime, Deamon!<br />
+            <span class="tabulation">- Alors laisse-moi venir en toi et te prouver que c'est réciproque, répondit-il, un
+                sourire aux coins des lèvres.</span>
+        </p>
+        <p class="tabulation">Bien que j'eusse le désir très fort de ne faire qu'un avec lui, de partager
+            tout mon être et de l'aimer... Ah, et puis non! Je voulus écrire que je fus sage et
+            que j'ai réservé cette expérience à de meilleurs temps, parce que c'est quand
+            même quelque chose de marquant dans nos vies, quelque chose de signifiant! Je
+            couchai avec lui et... oh, tout plein de mots me viennent en tête!</p>
+        <p class="tabulation">- Quelle est cette expression sur ton visage, me demanda Deamon.<br />
+            <span class="tabulation">Réflexion, réflexion... Que pourrait-elle bien être?</span><br />
+            <span class="tabulation">- ô? Mes rêves se réalisent enfin, c'est tout. C'est que je t'ai imaginé ici
+                même. J'ai tant rêvé à ce moment pour qu'il se réalise enfin... Ça y est, tu es à ma
+                portée, et ce n'est pas qu'un rêve, là!
+        </p>
+        <p class="tabulation">Bien beau, hein? Deamon, m'aimes-tu? Après tout ce que j'ai dû traverser,
+            tout ce que je dois traverser, et tout ce que je traverserai pour t'atteindre..? Je
+            t'aime et je veux que ça se sache haut-delà de notre mince entourage. Deamon,
+            veux-tu m'épouser?</p>
+        <p class="tabulation">Je le serrai contre moi, je goûtai à ses lèvres, je l'aimai...</p>
+        <br /><br /><br /><br /><br />
+        <p class="tabulation">Vous voilà arrivés à la fin de ce fabuleux livre... Mais j'ai envie de
+            continuer! L'écriture est un sentiment très fort, presqu'autant que l'amour! C'est
+            peut-être parce que... <span style="font-style: italic">j'aime écrire?</span> Enfin, allons-y alors!</p>
+        <p id="page2">40</p>
     </article>
     <footer>
         <div class="row">
@@ -79,11 +78,11 @@
     <section>
         <div class="row">
             <div class="col-7">
-                <a href="page24.html#page24" class="precedant"><img src="images/precedant.png" title="Page précédante"
+                <a href="page39.html#page39" class="precedant"><img src="images/precedant.png" title="Page précédante"
                         alt="Précédant" /></a>
             </div>
             <div clas="col-5">
-                <a href="page26.html#page26" class="suivant"><img src="images/suivant.png" title="Page suivante"
+                <a href="page41.html#page41" class="suivant"><img src="images/suivant.png" title="Page suivante"
                         alt="Suivant" /></a>
             </div>
         </div>
