--- a/page46.html
+++ b/page46.html
@@ -25,43 +25,36 @@
         <li><a href="page4.html#page4" title="Chapitre premier">Chapitre 1</a></li>
         <li><a href="page10.html#page10" title="Chapitre second">Chapitre 2</a></li>
         <li><a href="page13.html#page13" title="Chapitre troisième">Chapitre 3</a></li>
-        <li><a href="page18.html#page18" title="Chapitre quatrième" class="chapitre">Chapitre 4</a></li>
+        <li><a href="page18.html#page18" title="Chapitre quatrième">Chapitre 4</a></li>
         <li><a href="page28.html#page28" title="Chapitre cinquième">Chapitre 5</a></li>
         <li><a href="page35.html#page35" title="Chapitre sixième">Chapitre 6</a></li>
         <li><a href="page41.html#page41" title="Chapitre septième">Chapitre 7</a></li>
-        <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
+        <li><a href="page45.html#page45" title="Chapitre huitième" class="chapitre">Chapitre 8</a></li>
         <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
         <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
     </nav>
-    <hr id="page25" />
+    <hr id="page46" />
     <article id="roman">
-        <p class="tabulation">Et que l’amour ne se situe pas toujours quelque part. Des fois on a à
-            chercher en nous-même si nous voulons avoir une chance de le trouver. Il est
-            comme mon ombre, il s'insinue dans mon cœur y reflétant de tels sentiments
-            qu’on ne pourrait qu’y retrouver: L'amour!</p>
-        <p style="text-align: center; font-style: italic;">Avec toi je n’ressens que d’la joie<br />
-            Mon cœur ne fait que parler de toi<br />
-            J’veux te perdre pour... euh... Rien au monde!<br />
-            Je pense à toi chaque seconde<br />
-            Mais pourquoi est-c’que t’es arrivé dans ma vie?
-            À force de vivre, t’en connais des émotions<br /><br />
-            Je n’ai pu ressentir de pareils émotions qu’envers lui<br />
-            Res<span style="font-weight: bold">sentir</span>? Ça sent quoi l’amour?<br /><br />
-            Une douceur telle qu’on ne pourrait que dire que cela se nomme l’amour.<br /><br />
-            Re et re-sentir, en lien avec l’amour et la douceur<br />
-            C’est comme le doux parfum d’une fleur<br />
-            La fleur est prise...<br />
-            Prise dans mes pensées<br />
-            Prise par mon regard<br />
-            Prise dans mon cœur<br />
-            Et un jour elle sera prise dans mes bras!</p>
-        <p class="tabulation">Je suis fragile comme une fleur, fragile comme de la soie. J’ai besoin de toi!
-            À vrai dire, je me sens vraiment comme un ange. On dit lorsqu'on fait des erreurs
-            que c’est normal, après tout, on est humain! Le suis-je? Je crois bien être venue du
-            ciel pour vous passer l'un de ces messages de persévérance..? Avouez que ce
-            serait beau! Pour me sortir de mon enfer et me guider vers la lumière, j’y suis</p>
-
-        <p id="page1">25</p>
+        <p class="tabulation">Je devrais être morte à l'heure actuelle, je devrais être sous terre depuis un
+            moment déjà. Je devrais être près de lui, je devrais être dans ses bras. Voici deux
+            possibilités, les deux seules qui sont permises quant à moi. Mais je l'ai perdu, je
+            n'ai fait que rêver qu'il m'aimait. Peut-être qu'après tout c'est vrai, on n'a jamais
+            été supposé se revoir. Oui, peut-être que mes guides et les siens ont fait une
+            grande erreur en me plaçant sur sa route. Mais je ne crois pas. Voyez tout ce que
+            j'ai eu grâce à lui. Voyez tout ce que j'ai appris venant de lui. Voyez comme il est
+            magicien.<br />
+            <span class="tabulation">Notre temps se sauve, mon beau. Je ne pourrai plus rester longtemps, lui
+                susurrais-je à l'oreille. Si tu voulais vraiment m'éloigner, détruire tout mon
+                espoir, ensevelir mon courage et mes dernières forces... Tu n'y es pas allé
+                correctement. Enfin, peut-être que oui. Mais... suffirait que je t'aie devant moi et
+                que je t'embrasse pour que ;)… vous tourniez la page? Non, voyons! Pour que Je
+                tourne la page. Je me rendrais à la page où tu te trouves, j'ouvrirais mon livre
+                pour qu'il ait la forme de tes lèvres et je l'aimerais. Bah, puisque je ne peux pas
+                t'avoir, je peux toujours me l'imaginer, non?</span>
+        </p>
+        <p class="tabulation" style="margin-bottom: 350px;">En attendant, j'attends! <span style="font-style: italic">**Le temps est long...... Quand
+                est-ce?**</span></p>
+        <p id="page2">46</p>
     </article>
     <footer>
         <div class="row">
@@ -79,11 +72,11 @@
     <section>
         <div class="row">
             <div class="col-7">
-                <a href="page24.html#page24" class="precedant"><img src="images/precedant.png" title="Page précédante"
+                <a href="page45.html#page45" class="precedant"><img src="images/precedant.png" title="Page précédante"
                         alt="Précédant" /></a>
             </div>
             <div clas="col-5">
-                <a href="page26.html#page26" class="suivant"><img src="images/suivant.png" title="Page suivante"
+                <a href="page47.html#page47" class="suivant"><img src="images/suivant.png" title="Page suivante"
                         alt="Suivant" /></a>
             </div>
         </div>
