Added cover and coverback

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <section>
     <div class="row">
       <div class="col-7">
-        <a href="cover1.html" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
+        <a href="cover.html" class="precedant"><img src="images/precedant.png" title="Page précédante" alt="Précédant" /></a>
       </div>
       <div clas="col-5">
         <a href="page4.html#page4" class="suivant"><img src="images/suivant.png" title="Page suivante" alt="Suivant" /></a>
