--- a/page4.html
+++ b/page4.html
@@ -30,11 +30,9 @@
       <li><a href="page45.html#page45" title="Chapitre huitième">Chapitre 8</a></li>
       <li><a href="page47.html#page47" title="Chapitre neuvième">Chapitre 9</a></li>
       <li><a href="page50.html#page50" title="Chapitre dixième">Chapitre 10</a></li>
-    </nav>
+    </nav><br />
 
-    <audio src="Enregistrements/page4.mp3" style="margin-right: 5%" controls></audio>
-    <!--<video src="Vidéos/WIN_20220103_18_42_24_Pro.mp4" width="25%" height="25%" style="border: 3px solid black; padding-top: 1px; padding-bottom: 1px; padding-left: 2px; padding-right: 2px;" controls>Pensez à mettre à jour votre navigateur</video>
-    <hr id="page4" />-->
+    <hr id="page4" />
     <article id="roman">
       <h3 class="chapter-title">Chapitre 1</h3>
 
