--- a/page52.html
+++ b/page52.html
@@ -71,7 +71,7 @@
                         alt="Précédant" /></a>
             </div>
             <div clas="col-5">
-                <a href="page52.html#page52" class="suivant"><img src="images/suivant.png" title="Page suivante"
+                <a href="coverback.html#roman" class="suivant"><img src="images/suivant.png" title="Page suivante"
                         alt="Suivant" /></a>
             </div>
         </div>
