Remove comas out of nowhere

--- a/page7.html
+++ b/page7.html
@@ -36,7 +36,7 @@
     <article id="roman">
       <p class="tabulation">Je ne ferai pas de moi la pauvre et malheureuse qui a eu un accident, non.</span>
         Je suis plutôt une grande combattante toujours prête à foncer à l'attaque peu
-        importe mon adversaire. Je suis à la recherche du bonheur depuis près d'une
+        importe mon adversaire. Je suis à la recherche du bonheur depuis plus d'une
         décennie. Mon but est d'apporter des changements et de colorer votre vie - La
         vôtre, chers lecteurs cherchant à n'apporter aucun changement positif. Juste en
         lisant ceci, je suis convaincue qu'au moins 75% des lecteurs se disent qu'ils ne
@@ -55,7 +55,7 @@
 
         Je ne peux qu'être en amour,<br />
         Et vivre chaque jour,<br />
-        Comme s'il était le dernier.<br />,
+        Comme s'il était le dernier.<br />
         Savoir que tout ce que je fais est apprécié,<br />
         Que ce que tu fais ne m'apporte que du bien,<br />
         Tu es tel un magicien,<br />
