Added a word on page 4

--- a/page4.html
+++ b/page4.html
@@ -50,7 +50,7 @@
       <p class="tabulation">Une autre journée s'est passée. Et une de plus! Je me sens si bien... mais si
         mal en même temps! Tous mes jours se ressemblent. Va-t-on nous rendre?
         Allons-nous finir par faire de la Terre un monde autre que le jeu d'enfants qu'elle
-        est actuellement? Vous vous trouvez sur un terrain de jeu en train de lire une
+        est actuellement? Vous vous trouvez actuellement sur un terrain de jeu en train de lire une
         partie de mon histoire. Une histoire à en couper le souffle!.. Et alors?</p>
 
       <p class="tabulation">Les lumières se ferment, les bougies s'éteignent, les fantômes sortent pour
